--- a/css/home.css
+++ b/css/home.css
@@ -1,1 +1,71 @@
 @charset "UTF-8";
+.introducao-container{
+    background-color: var(--c012);
+    color: var(--w);
+    box-shadow: inset 0px -120px white;
+}
+.introducao{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0px 40px;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0px 20px;
+}
+.introducao-conteudo{
+    align-self: end;
+    padding-bottom: 200px;
+}
+.introducao h1{
+    margin-bottom: 32px;
+    font: 600 64px/1.125 'Poppins', sans-serif;
+}
+.introducao h1 span{
+    color: var(--cp001);
+}
+.introducao p{
+    margin-bottom: 40px;
+    font: 400 24rem/1.5 'Roboto', sans-serif;
+    color: var(--c005);
+}
+.introducao-imagem img{
+    height: 100%;
+    object-fit: cover;
+    border-radius: 4px;
+}
+@media (max-width: 1200px){
+    .introducao h1{
+        font-size: 48px;
+    }
+    .introducao p{
+        font-size: 18px;
+    }
+}
+@media (max-width: 800px){
+    .introducao-container{
+        background-color: var(--c011);
+        padding-top: 40px;
+        box-shadow: inset 0 -60px white;
+    }
+    .introducao{
+        grid-template-columns: 1fr;
+        gap: 32px;
+    }
+    .introducao-conteudo{
+        padding-bottom: 0px;
+    }
+    .introducao h1{
+        font-size: 32px;
+        margin-bottom: 16px;
+    }
+    .introducao img{
+        height: 300px;
+        width: 100%;
+    }
+}
+@media (max-width: 600px){
+    .botao{
+        padding: 12px 16px;
+        font-size: 16px;
+    }
+}
