--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import "global/global.css";
 @import "global/header.css";
 @import "global/footer.css";
 @import "utilitario.css";
