--- a/css/utilitario.css
+++ b/css/utilitario.css
@@ -1,10 +1,6 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap');
-*{
-    margin: 0px;
-    padding: 0px;
-}
 :root{
     --w: #ffffff;
     --c001: #f7f7f7;
@@ -26,40 +22,40 @@
     --cp005: #332200;
 }
 .font-1-xxl{
-    font: 600 4rem/4.5rem 'Poppins', sans-serif;
+    font: 600 4rem/4.5 'Poppins', sans-serif;
 }
 .font-1-xl{ 
-    font: 600 2rem/2.5rem 'Poppins', sans-serif;
+    font: 600 2rem/2.5 'Poppins', sans-serif;
 }
 .font-1-l{
-    font: 400 1.5rem/2.25rem 'Poppins', sans-serif;
+    font: 400 1.5rem/2.25 'Poppins', sans-serif;
 }
 .font-1-m {
-    font: 400 1.125rem/1.5rem 'Poppins', sans-serif;
+    font: 400 1.125rem/1.5 'Poppins', sans-serif;
 }
 .font-1-m-b {
-    font: 500 1.125rem/1.5rem 'Poppins', sans-serif;
+    font: 500 1.125rem/1.5 'Poppins', sans-serif;
 }
 .font-1-s {
-    font: 400 1rem/1.5rem 'Poppins', sans-serif;
+    font: 400 1rem/1.5 'Poppins', sans-serif;
 }
 .font-1-xs {
-    font: 600 0.75rem/1rem 'Poppins', sans-serif;
+    font: 600 0.75rem/1 'Poppins', sans-serif;
 }
 .font-2-l {
-    font: 400 1.5rem/2.25rem 'Roboto', sans-serif;
+    font: 400 1.5rem/2.25 'Roboto', sans-serif;
 }
 .font-2-l-b {
-    font: 500 1.5rem/2.25rem 'Roboto', sans-serif;
+    font: 500 1.5rem/2.25 'Roboto', sans-serif;
 }
 .font-2-m {
-    font: 500 1.125rem/1.5rem 'Roboto', sans-serif;
+    font: 500 1.125rem/1.5 'Roboto', sans-serif;
 }
 .font-2-s {
-    font: 400 1rem/1.5rem 'Roboto', sans-serif;
+    font: 400 1rem/1.5 'Roboto', sans-serif;
 }
 .font-2-xs {
-    font: 600 0.875rem/1.25rem 'Poppins', sans-serif;
+    font: 600 0.875rem/1.25 'Poppins', sans-serif;
 }
 .m004 {
     margin:4px;}
