--- a/css/global/global.css
+++ b/css/global/global.css
@@ -6,6 +6,7 @@
 }
 body{
     font-family: Arial, Helvetica, sans-serif;
+    color: var(--c011);
 }
 a{
     color: inherit;
@@ -22,7 +23,7 @@ img{
     box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.1);
     text-transform: uppercase;
     color: var(--cp005);
-    font: 700 18px/1.33 'Poppins', sans-serif;
+    font: 600 1.125rem/1.35 'Poppins', sans-serif;
 }
 .botao:hover{
     background-image: linear-gradient(#FFB60D, #E59317);
