--- a/css/utilitario.css
+++ b/css/utilitario.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
 :root{
     --w: #ffffff;
     --c001: #f7f7f7;
@@ -22,86 +22,61 @@
     --cp005: #332200;
 }
 .font-1-xxl{
-    font: 600 4rem/4.5 'Poppins', sans-serif;
+    font: 600 4rem/1.125 'Poppins', sans-serif;
 }
 .font-1-xl{ 
-    font: 600 2rem/2.5 'Poppins', sans-serif;
+    font: 600 2rem/1.25 'Poppins', sans-serif;
 }
 .font-1-l{
-    font: 400 1.5rem/2.25 'Poppins', sans-serif;
+    font: 400 1.5rem/1.5 'Poppins', sans-serif;
 }
 .font-1-m {
-    font: 400 1.125rem/1.5 'Poppins', sans-serif;
+    font: 400 1.125rem/1.35 'Poppins', sans-serif;
 }
 .font-1-m-b {
-    font: 500 1.125rem/1.5 'Poppins', sans-serif;
+    font: 600 1.125rem/1.35 'Poppins', sans-serif;
 }
 .font-1-s {
     font: 400 1rem/1.5 'Poppins', sans-serif;
 }
 .font-1-xs {
-    font: 600 0.75rem/1 'Poppins', sans-serif;
+    font: 400 0.75rem/1.35 'Poppins', sans-serif;
+}
+.font-2-xl{
+    font: 500 2rem/1.25 'Roboto', sans-serif;  
 }
 .font-2-l {
-    font: 400 1.5rem/2.25 'Roboto', sans-serif;
+    font: 400 1.5rem/1.5 'Roboto', sans-serif;
 }
 .font-2-l-b {
     font: 500 1.5rem/2.25 'Roboto', sans-serif;
+    letter-spacing: 0.015em;
+    text-transform: uppercase;
 }
 .font-2-m {
-    font: 500 1.125rem/1.5 'Roboto', sans-serif;
+    font: 500 1.125rem/1.35 'Roboto', sans-serif;
 }
 .font-2-s {
     font: 400 1rem/1.5 'Roboto', sans-serif;
 }
 .font-2-xs {
-    font: 600 0.875rem/1.25 'Poppins', sans-serif;
+    font: 400 0.875rem/1.43 'Poppins', sans-serif;
 }
-.m004 {
-    margin:4px;}
-
-.m008 {
-    margin:8px;}
-
-.m012 {
-    margin:12px;
-}
-.m016 {
-    margin:16px;
-}
-.m020 {
-    margin:20px;
-}
-.m024 {
-    margin:24px;
-}
-.m032 {
-    margin:32px;
-}
-.m036 {
-    margin:36px;
-}
-.m040 {
-    margin:40px;
-}
-.m048 {
-    margin:48px;
-}
-.m060 {
-    margin:60px;
-}
-.m072 {
-    margin:72px;
-}
-.m080 {
-    margin:80px;
-}
-.m120 {
-    margin:120px;
-}
-.m160 {
-    margin:160px;
-}
-.m200 {
-    margin:200px;
-}
+@media (max-width: 1200px) {
+    .font-1-xxl {
+      font-size: 3rem;
+    }
+    .font-2-l,
+    .font-2-l-b {
+      font-size: 1.125rem;
+    }
+  }
+  @media (max-width: 800px) {
+    .font-1-xxl {
+      font-size: 2rem;
+    }
+    .font-1-xl,
+    .font-2-xl {
+      font-size: 1.5rem;
+    }
+  }
