--- a/css/global/global.css
+++ b/css/global/global.css
@@ -16,15 +16,9 @@ img{
     max-width: 100%;
     display: block;
 }
-.botao{
-    padding: 16px 32px;
-    background-image: linear-gradient(#FFBF00, #F2A50C);
+img[src$=".jpg"]{
     border-radius: 4px;
-    box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.1);
-    text-transform: uppercase;
-    color: var(--cp005);
-    font: 600 1.125rem/1.35 'Poppins', sans-serif;
 }
-.botao:hover{
-    background-image: linear-gradient(#FFB60D, #E59317);
+ul{
+    list-style: none;
 }
