--- a/css/global/header.css
+++ b/css/global/header.css
@@ -4,9 +4,8 @@
     background-color: var(--c012);
 }
 .cabecalho-container{
-    padding: 20px;
-    margin: auto;
-    max-width: 1200px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
