--- a/css/utilitario.css
+++ b/css/utilitario.css
@@ -21,6 +21,25 @@
     --cp004: #664400;
     --cp005: #332200;
 }
+.container{
+    max-width: 1200px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.botao{
+    padding: 16px 32px;
+    background-image: linear-gradient(#FFBF00, #F2A50C);
+    border-radius: 4px;
+    box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.1);
+    text-transform: uppercase;
+    color: var(--cp005);
+    font: 600 1.125rem/1.35 'Poppins', sans-serif;
+}
+.botao:hover{
+    background-image: linear-gradient(#FFB60D, #E59317);
+}
 .font-1-xxl{
     font: 600 4rem/1.125 'Poppins', sans-serif;
 }
