--- a/css/home/home.css
+++ b/css/home/home.css
@@ -24,6 +24,7 @@
     color: var(--c005);
 }
 .introducao-imagem img{
+    width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 4px;
