--- a/css/style.css
+++ b/css/style.css
@@ -3,5 +3,6 @@
 @import "global/header.css";
 @import "global/footer.css";
 @import "utilitario.css";
-@import "home.css";
-@import "bicicletas-lista.css";
+@import "home/home.css";
+@import "home/bicicletas-lista.css";
+@import "home/tecnologias.css";
