--- a/css/utilitario.css
+++ b/css/utilitario.css
@@ -29,6 +29,7 @@
     margin-right: auto;
 }
 .botao{
+    display: inline-block;
     padding: 16px 32px;
     background-image: linear-gradient(#FFBF00, #F2A50C);
     border-radius: 4px;
@@ -39,6 +40,23 @@
 }
 .botao:hover{
     background-image: linear-gradient(#FFB60D, #E59317);
+}
+.link{
+    display: inline-block;
+    color: var(--cp001);
+    font: 500 1.5rem/1.5 "Poppins", sans-serif;
+    text-transform: uppercase;
+    transition: 0.3s;
+}
+.link::after{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: currentColor;
+}
+.link:hover{
+    color: var(--w);
 }
 .font-1-xxl{
     font: 600 4rem/1.125 'Poppins', sans-serif;
