--- a/css/home/parceiros.css
+++ b/css/home/parceiros.css
@@ -38,6 +38,10 @@
     .parceiros ul{
         grid-template-columns: repeat(2, 1fr);
     }
+    .parceiros li{
+        display: flex;
+        padding: 20px;
+    }
     .parceiros li:nth-child(odd){
     border-left: none;
 }
