--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,12 @@
 @import "global/global.css";
 @import "global/header.css";
 @import "global/footer.css";
-@import "utilitario.css";
+@import "global/utilitario.css";
+/*Home*/
 @import "home/home.css";
 @import "home/bicicletas-lista.css";
 @import "home/tecnologias.css";
 @import "home/parceiros.css";
 @import "home/depoimento.css";
+/*Seguros*/
+@import "seguros/seguros.css";
