--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,5 @@
 @import "termos/termos.css";
 /*Bicicletas*/
 @import "bicicletas/bicicletas.css";
+/*Bicicleta*/
+@import "bicicleta/bicicleta.css";
