--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 @import "global/header.css";
 @import "global/footer.css";
 @import "global/utilitario.css";
+@import "global/formulario.css";
 /*Home*/
 @import "home/home.css";
 @import "home/bicicletas-lista.css";
@@ -21,3 +22,6 @@
 /*Bicicleta*/
 @import "bicicleta/bicicleta.css";
 @import "bicicleta/seguro.css";
+/*Contato*/
+@import "contato/contato.css";
+@import "contato/lojas.css";
