--- a/css/global/utilitario.css
+++ b/css/global/utilitario.css
@@ -2,7 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&display=swap');
-:root{
+
+:root {
     --w: #ffffff;
     --c001: #f7f7f7;
     --c002: #ededed;
@@ -22,22 +23,26 @@
     --cp004: #664400;
     --cp005: #332200;
 }
-.container{
+
+.container {
     max-width: 1200px;
     padding-left: 20px;
     padding-right: 20px;
     margin-left: auto;
     margin-right: auto;
 }
-.titulo-bg{
+
+.titulo-bg {
     padding-top: 60px;
     padding-bottom: 60px;
     background-color: var(--c011);
 }
-.titulo p{
+
+.titulo p {
     margin-bottom: 4px;
 }
-.botao{
+
+.botao {
     display: inline-block;
     padding: 16px 32px;
     background-image: linear-gradient(#FFBF00, #F2A50C);
@@ -47,22 +52,29 @@
     color: var(--cp005);
     font: 600 1.125rem/1.35 'Poppins', sans-serif;
     max-width: max-content;
+    border: none;
+    cursor: pointer;
 }
-.botao:hover{
+
+.botao:hover {
     background-image: linear-gradient(#FFB60D, #E59317);
 }
-.botao.secundario{
+
+.botao.secundario {
     background: var(--c010);
     color: var(--c002);
 }
-.botao.secundario:hover{
+
+.botao.secundario:hover {
     background: var(--c009);
 }
-.botao.seta{
+
+.botao.seta {
     display: flex;
     align-items: center;
 }
-.botao.seta::after{
+
+.botao.seta::after {
     content: "";
     display: inline-block;
     width: 18px;
@@ -71,146 +83,186 @@
     background: url(../../images/icones/seta.svg);
     transition: 0.3s;
 }
-.botao.seta:hover::after{
+
+.botao.seta:hover::after {
     transform: translateX(4px);
 }
-.link{
+
+.link {
     display: inline-block;
     color: var(--cp001);
     font: 500 1.5rem/1.5 "Poppins", sans-serif;
     text-transform: uppercase;
     transition: 0.3s;
 }
-.link::after{
+
+.link::after {
     content: "";
     display: block;
     width: 100%;
     height: 4px;
     background-color: currentColor;
 }
-.link:hover{
+
+.link:hover {
     color: var(--w);
 }
-.font-1-xxl{
+
+.font-1-xxl {
     font: 600 4rem/1.125 'Poppins', sans-serif;
 }
-.font-1-xl{ 
+
+.font-1-xl {
     font: 600 2rem/1.25 'Poppins', sans-serif;
 }
-.font-1-l{
+
+.font-1-l {
     font: 400 1.5rem/1.5 'Poppins', sans-serif;
 }
+
 .font-1-m {
     font: 400 1.125rem/1.35 'Poppins', sans-serif;
 }
+
 .font-1-m-b {
     font: 600 1.125rem/1.35 'Poppins', sans-serif;
 }
+
 .font-1-s {
     font: 400 1rem/1.5 'Poppins', sans-serif;
 }
+
 .font-1-xs {
     font: 400 0.75rem/1.35 'Poppins', sans-serif;
 }
-.font-2-xl{
-    font: 500 2rem/1.25 'Roboto', sans-serif;  
+
+.font-2-xl {
+    font: 500 2rem/1.25 'Roboto', sans-serif;
 }
+
 .font-2-l {
     font: 400 1.5rem/1.5 'Roboto', sans-serif;
 }
+
 .font-2-l-b {
     font: 500 1.5rem/2.25 'Roboto', sans-serif;
     letter-spacing: 0.015em;
     text-transform: uppercase;
 }
+
 .font-2-m {
     font: 500 1.125rem/1.35 'Roboto', sans-serif;
 }
+
 .font-2-s {
     font: 400 1rem/1.5 'Roboto', sans-serif;
 }
+
 .font-2-xs {
     font: 400 0.875rem/1.43 'Poppins', sans-serif;
 }
-.w{
+
+.w {
     color: var(--w)
 }
-.c001{
+
+.c001 {
     color: var(--c001)
 }
-.c002{
+
+.c002 {
     color: var(--c002)
 }
-.c003{
+
+.c003 {
     color: var(--c003)
 }
-.c004{
+
+.c004 {
     color: var(--c004)
 }
-.c005{
+
+.c005 {
     color: var(--c005)
 }
-.c006{
+
+.c006 {
     color: var(--c006)
 }
-.c007{
+
+.c007 {
     color: var(--c007)
 }
-.c008{
+
+.c008 {
     color: var(--c008)
 }
-.c009{
+
+.c009 {
     color: var(--c009)
 }
-.c010{
+
+.c010 {
     color: var(--c010)
 }
-.c011{
+
+.c011 {
     color: var(--c011)
 }
-.c012{
+
+.c012 {
     color: var(--c012)
 }
-.cp001{
+
+.cp001 {
     color: var(--cp001)
 }
-.cp002{
+
+.cp002 {
     color: var(--cp002)
 }
-.cp003{
+
+.cp003 {
     color: var(--cp003)
 }
-.cp004{
+
+.cp004 {
     color: var(--cp004)
 }
-.cp005{
+
+.cp005 {
     color: var(--cp005)
 }
 
 @media (max-width: 1200px) {
     .font-1-xxl {
-      font-size: 3rem;
+        font-size: 3rem;
     }
+
     .font-2-l,
     .font-2-l-b {
-      font-size: 1.125rem;
+        font-size: 1.125rem;
     }
-  }
-  @media (max-width: 800px) {
+}
+
+@media (max-width: 800px) {
     .font-1-xxl {
-      font-size: 2rem;
+        font-size: 2rem;
     }
+
     .font-1-xl,
     .font-2-xl {
-      font-size: 1.5rem;
+        font-size: 1.5rem;
     }
-    .titulo-bg{
+
+    .titulo-bg {
         padding-top: 40px;
         padding-bottom: 40px;
     }
-    .titulo p{
+
+    .titulo p {
         font-size: 1rem;
         text-transform: lowercase;
         font-weight: 400;
     }
-  }
+}
