--- a/css/bicicletas/bicicletas.css
+++ b/css/bicicletas/bicicletas.css
@@ -1,21 +1,27 @@
 @charset "UTF-8";
-.bicicletas-bg{
+
+.bicicletas-bg {
     background-image: linear-gradient(to right, var(--w) 30%, var(--c011) 30%);
 }
-.bicicletas{
+
+.bicicletas {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 40px;
     padding-top: 60px;
     padding-bottom: 60px;
+    background: url('../../images/dec/top-right.svg') no-repeat top 40px right 20px;
 }
-.bicicletas-imagem{
+
+.bicicletas-imagem {
     display: grid;
 }
-.bicicletas-imagem img{
+
+.bicicletas-imagem img {
     grid-area: 1 / 1;
 }
-.bicicletas-imagem span{
+
+.bicicletas-imagem span {
     grid-area: 1 / 1;
     place-self: start end;
     margin-top: 20px;
@@ -24,20 +30,24 @@
     display: inline-block;
     border-radius: 4px 0px 0px 4px;
 }
-.bicicletas-conteudo{
+
+.bicicletas-conteudo {
     display: grid;
     grid-template-columns: 1fr auto;
     align-content: start;
     align-content: start;
 }
+
 .bicicletas h2,
-.bicicletas p{
+.bicicletas p {
     grid-column: 1 / -1;
 }
-.bicicletas h2{
+
+.bicicletas h2 {
     margin-bottom: 20px;
 }
-.bicicletas h2::before{
+
+.bicicletas h2::before {
     content: "";
     display: block;
     width: 12px;
@@ -45,44 +55,54 @@
     background-color: var(--cp001);
     margin-bottom: 8px;
 }
-.bicicletas p{
+
+.bicicletas p {
     margin-bottom: 32px;
 }
-.bicicletas a{
+
+.bicicletas a {
     place-self: end;
 }
-.bicicletas li{
+
+.bicicletas li {
     display: flex;
     align-items: center;
     gap: 8px;
 }
-.bicicletas ul{
+
+.bicicletas ul {
     display: grid;
     gap: 16px;
 }
-.bicicletas-conteudo img{
+
+.bicicletas-conteudo img {
     width: 24px;
 }
-@media (max-width: 800px){
-    .bicicletas-bg{
+
+@media (max-width: 800px) {
+    .bicicletas-bg {
         background: var(--c011);
     }
-    .bicicletas{
+
+    .bicicletas {
         grid-template-columns: 1fr;
         gap: 20px;
         padding-top: 40px;
         padding-bottom: 40px;
     }
 }
-@media (max-width: 600px){
-    .bicicletas-conteudo{
+
+@media (max-width: 600px) {
+    .bicicletas-conteudo {
         grid-template-columns: 1fr;
     }
-    .bicicletas ul{
+
+    .bicicletas ul {
         font-size: 1rem;
         grid-template-columns: 1fr 1fr;
         margin-bottom: 32px;
     }
+
     .bicicletas a {
         place-self: start;
     }
