--- a/css/contato/contato.css
+++ b/css/contato/contato.css
@@ -16,13 +16,13 @@
 }
 
 .contato-dados {
-    background-color: var(--c012);
     border-radius: 5px 0 0 5px;
+    background: var(--c012) url(../../images/dec/bottom-left.svg) no-repeat bottom 20px left 20px;
 }
 
 .contato-formulario {
-    background-color: var(--w);
     border-radius: 0 5px 5px 0;
+    background: var(--w) url(../../images/dec/bottom-right.svg) no-repeat bottom 20px right 20px;
 }
 
 .contato-dados h2 {
@@ -81,6 +81,7 @@
 
     .contato-dados {
         border-radius: 5px 5px 0 0;
+        background: var(--c012);
     }
 
     .contato-formulario {
