--- a/css/home/depoimento.css
+++ b/css/home/depoimento.css
@@ -1,21 +1,26 @@
 @charset "UTF-8";
-.depoimento{
+
+.depoimento {
     display: grid;
     grid-template-columns: 1fr 1fr;
     background-color: var(--cp001);
     overflow: hidden;
 }
-.depoimento img{
+
+.depoimento img {
     border-radius: 0px;
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
-.depoimento-conteudo{
+
+.depoimento-conteudo {
     padding: 40px 40px 80px 80px;
     align-self: end;
+    background: url('../../images/dec/bottom-right-p.svg') no-repeat bottom 20px right 20px;
 }
-.depoimento-conteudo p{
+
+.depoimento-conteudo p {
     font-family: "Merriweather", serif;
     font-style: italic;
     font-weight: 900;
@@ -23,29 +28,41 @@
     max-width: 32ch;
     position: relative;
 }
+
 .depoimento-conteudo p::before,
-.depoimento-conteudo p::after{
+.depoimento-conteudo p::after {
     font-size: 5rem;
     color: var(--cp002);
     position: absolute;
 }
-.depoimento-conteudo p::before{
+
+.depoimento-conteudo p::before {
     content: '“';
     left: -50px;
     top: -20px;
 }
-.depoimento-conteudo p::after{
+
+.depoimento-conteudo p::after {
     content: '”';
 }
-@media (max-width: 800px){
-    .depoimento{
+
+@media (min-width: 1200px) {
+    .depoimento img {
+        max-height: 520px;
+    }
+}
+
+@media (max-width: 800px) {
+    .depoimento {
         grid-template-columns: 1fr;
         text-align: center;
     }
-    .depoimento img{
+
+    .depoimento img {
         max-height: 200px;
     }
-    .depoimento-conteudo{
+
+    .depoimento-conteudo {
         padding: 40px 20px;
         justify-self: center;
     }
