--- a/css/orcamento/orcamento.css
+++ b/css/orcamento/orcamento.css
@@ -35,7 +35,7 @@
 
 .orcamento-produto {
     border-radius: 5px 0 0 5px;
-    background-color: var(--c012);
+    background: var(--c012) url(../../images/dec/bottom-left.svg) no-repeat bottom 20px left 20px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
@@ -54,10 +54,23 @@
     font: 400 1rem/1.5 "Popins", sans-serif;
     color: var(--c004);
     background-color: var(--c010);
-    display: block;
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    align-items: center;
     padding: 12px 16px;
     border-radius: 4px;
     cursor: pointer;
+    border: 1px solid var(--c010);
+}
+
+.orcamento-produto label:hover {
+    background-color: var(--c009);
+    border-color: var(--c009);
+}
+
+.orcamento-produto input:focus+label {
+    box-shadow: 0 0 0 2px var(--cp001);
+    border-color: var(--c012);
 }
 
 .orcamento-produto label::before {
@@ -69,6 +82,14 @@
     border: 1px solid var(--c006);
     border-radius: 50%;
     margin-right: 8px;
+}
+
+.orcamento-produto label span {
+    display: none;
+}
+
+.orcamento-produto input:checked+label span {
+    display: inline-block;
 }
 
 .orcamento-produto input:checked+label::before {
@@ -87,12 +108,75 @@
     color: var(--c012);
 }
 
+.orcamento-conteudo {
+    display: none;
+}
+
+.orcamento-conteudo h2,
+.orcamento-dados h2:nth-of-type(n + 2) {
+    margin-top: 20px;
+}
+
 .orcamento-dados {
     border-radius: 0 5px 5px 0;
-    background-color: var(--w);
+    background: var(--w) url(../../images/dec/bottom-right.svg) no-repeat bottom 20px right 20px;
 }
 
 #bikcraft:checked~#orcamento-bikcraft,
 #seguro:checked~#orcamento-seguro {
-    display: block;
+    display: grid;
+    gap: 20px;
+}
+
+.orcamento-detalhes {
+    display: none;
+    background-color: var(--w);
+    padding: 20px;
+    grid-template-columns: 1fr 1fr;
+    border-radius: 4px;
+    align-items: center;
+}
+
+.orcamento-detalhes li {
+    display: flex;
+    align-items: center;
+    margin-bottom: 8px;
+}
+
+.orcamento-detalhes li img {
+    width: 16px;
+    margin-right: 8px;
+}
+
+.orcamento-produto input:checked+label+.orcamento-detalhes {
+    display: grid;
+}
+
+@media (max-width: 1200px) {
+
+    .orcamento-produto,
+    .orcamento-detalhes {
+        padding: 32px;
+    }
+}
+
+@media (max-width: 800px) {
+    .orcamento {
+        grid-template-columns: 1fr;
+    }
+
+    .orcamento-produto {
+        border-radius: 5px 5px 0 0;
+        background: var(--c012);
+    }
+
+    .orcamento-dados {
+        border-radius: 0 0 5px 5px;
+    }
+}
+
+@media (max-width: 400px) {
+    .orcamento-produto {
+        grid-template-columns: 1fr;
+    }
 }
