--- a/css/global/global.css
+++ b/css/global/global.css
@@ -1,24 +1,31 @@
 @charset "UTF-8";
-*{
+
+* {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
-body{
+
+body {
     font-family: Arial, Helvetica, sans-serif;
     color: var(--c011);
 }
-a{
+
+a {
     color: inherit;
     text-decoration: none;
 }
-img{
+
+img {
     max-width: 100%;
+    height: auto;
     display: block;
 }
-img[src$=".jpg"]{
+
+img[src$=".jpg"] {
     border-radius: 4px;
 }
-ul{
+
+ul {
     list-style: none;
 }
