--- a/css/seguros/perguntas.css
+++ b/css/seguros/perguntas.css
@@ -1,33 +1,44 @@
 @charset "UTF-8";
-.perguntas{
+
+.perguntas {
     padding-top: 120px;
     padding-bottom: 120px;
 }
-.perguntas h2{
+
+.perguntas h2 {
     margin-bottom: 60px;
 }
-.perguntas dl > div{
+
+.perguntas dl>div {
     padding: 20px;
     border-radius: 4px;
 }
-.perguntas dl > div:nth-child(odd){
+
+.perguntas dl>div:nth-child(odd) {
     background-color: var(--c001);
 }
-.perguntas dt{
+
+.perguntas button {
     display: grid;
     grid-template-columns: auto 1fr auto;
     align-items: center;
     gap: 8px;
     cursor: pointer;
+    border: none;
+    background: none;
+    width: 100%;
+    text-align: left;
 }
-.perguntas dt::before{
+
+.perguntas button::before {
     content: "";
     display: inline-block;
     width: 12px;
     height: 8px;
     background-color: var(--cp001);
 }
-.perguntas dt::after{
+
+.perguntas button::after {
     content: "";
     display: inline-block;
     width: 14px;
@@ -35,20 +46,32 @@
     background-image: url('../../images/icones/seta-abrir.svg');
     transition: 0.3s;
 }
-.perguntas dt:hover::after{
+
+.perguntas button:hover::after,
+.perguntas button[aria-expanded="true"]::after {
     transform: rotate(180deg);
 }
 .perguntas dd{
+    display: none;
+}
+
+.perguntas dd.ativo{
+    display: block;
+}
+
+.perguntas dd {
     padding-left: 20px;
     padding-top: 16px;
     max-width: 80ch;
 }
-@media (max-width: 800px){
-    .perguntas{
+
+@media (max-width: 800px) {
+    .perguntas {
         padding-top: 60px;
         padding-bottom: 60px;
     }
-    .perguntas h2{
+
+    .perguntas h2 {
         margin-bottom: 40px;
     }
 }
