--- a/css/global/animacao.css
+++ b/css/global/animacao.css
@@ -1,22 +1,22 @@
-.fadeInDown {
-    transform: translate3d(0, -20px, 0);
-  }
-  .fadeInUp {
-    transform: translate3d(0, 20px, 0);
-  }
-  .fadeInRight {
-    transform: translate3d(20px, 0, 0);
-  }
-  .fadeInLeft {
-    transform: translate3d(-20px, 0, 0);
-  }
+.js .fadeInDown {
+  transform: translate3d(0, -20px, 0);
+}
+.js .fadeInUp {
+  transform: translate3d(0, 20px, 0);
+}
+.js .fadeInRight {
+  transform: translate3d(20px, 0, 0);
+}
+.js .fadeInLeft {
+  transform: translate3d(-20px, 0, 0);
+}
   
-  /* 7 Adicione o CSS Essencial abaixo */
-  [data-anime] {
-    opacity: 0;
-  }
-  .anime {
-    opacity: 1;
-    transform: none;
-    transition: transform 0.8s, opacity 0.8s;
-  }
+/* 7 Adicione o CSS Essencial abaixo */
+.js [data-anime] {
+  opacity: 0;
+}
+.js .anime {
+  opacity: 1;
+  transform: none;
+  transition: transform 0.8s, opacity 0.8s;
+}
